Implement support for chunked streaming of json data
This results in general saving in string allocation
that happens when using non-streaming responses

--- a/agent/jvm/src/main/resources/default-jolokia-agent.properties
+++ b/agent/jvm/src/main/resources/default-jolokia-agent.properties
@@ -73,6 +73,9 @@ maxObjects=0
 # Whether multicast discovery is enabled or not.
 discoveryEnabled=true
 
+# whether to stream
+streaming=false
+
 # HTTPS related setting
 secureSocketProtocol=TLS
 keyStoreType=JKS
