--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.jolokia</groupId>
     <artifactId>jolokia</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.2-1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
     
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jolokia</groupId>
   <artifactId>jolokia-client-parent</artifactId>
-  <version>1.3.2</version>
+  <version>1.3.2-1</version>
   <name>jolokia-client-parent</name>
   <description>jolokia client parent pom</description>
 
@@ -41,4 +41,8 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>v1.3.2-1</tag>
+  </scm>
 </project>
