--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jolokia</groupId>
   <artifactId>jolokia</artifactId>
-  <version>1.3.2-1-SNAPSHOT</version>
+  <version>1.3.2-1</version>
   <name>jolokia-parent</name>
   <description>jolokia parent pom</description>
 
@@ -345,7 +345,7 @@
   <scm>
     <connection>scm:git:git://github.com/gnufied/jolokia.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/gnufied/jolokia.git</developerConnection>
-    <tag>v1.3.2</tag>
+    <tag>v1.3.2-1</tag>
     <url>git://github.com/gnufied/jolokia.git</url>
   </scm>
   
@@ -537,9 +537,6 @@
             <configuration>
               <useAgent>true</useAgent>
               <keyname>roland@jolokia.org</keyname>
-              <gpgArguments>
-                <arg>--allow-weak-digest-algos</arg>
-              </gpgArguments>
             </configuration>
           </plugin>
 
