--- a/it/pom.xml
+++ b/it/pom.xml
@@ -20,14 +20,14 @@
   <parent>
     <groupId>org.jolokia</groupId>
     <artifactId>jolokia</artifactId>
-    <version>1.3.2-1</version>
+    <version>1.3.2-1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
     
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jolokia</groupId>
   <artifactId>jolokia-it-parent</artifactId>
-  <version>1.3.2-1</version>
+  <version>1.3.2</version>
   <name>jolokia-it-parent</name>
   <description>jolokia integration tests parent pom</description>
 
@@ -37,9 +37,4 @@
     <module>core</module>
     <module>war</module>
   </modules>
-
-
-  <scm>
-    <tag>v1.3.2-1</tag>
-  </scm>
 </project>
