--- a/tools/test-util/pom.xml
+++ b/tools/test-util/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>jolokia-test-util</artifactId>
-  <version>1.3.2-1</version>
+  <version>1.3.2</version>
   <packaging>jar</packaging>
   <name>jolokia-test-util</name>
   <description>test utility classes</description>
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.jolokia</groupId>
     <artifactId>jolokia</artifactId>
-    <version>1.3.2-1</version>
+    <version>1.3.2-1-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -60,9 +60,4 @@
     </dependency>
 
   </dependencies>
-
-
-  <scm>
-    <tag>v1.3.2-1</tag>
-  </scm>
 </project>
